--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
+  background-color: #0f172a;
+  /* Dark Slate fallback */
 }
 
 html,
@@ -8,4 +10,22 @@ body,
 #root {
   height: 100%;
   overflow: hidden;
+}
+
+/* Custom Dark Scrollbar */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #5b6069;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #475569;
 }
